modify package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-flash",
+  "name": "wlh-express-flash",
   "version": "1.0.0",
   "description": "express flash",
   "main": "index.js",
